--- a/PaginaValorant/Armas.html
+++ b/PaginaValorant/Armas.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="ValorantFanPage.html"><img src="/Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
+                <li><a href="PaginaValorant.html"><img src="/Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
                 <li><a href="Agentes.html">AGENTES</a></li>
                 <li><a href="Armas.html">ARMAS</a></li>
                 <li><a href="Mapas.html">MAPAS</a></li>
