--- a/PaginaValorant/Mapas.html
+++ b/PaginaValorant/Mapas.html
@@ -10,7 +10,7 @@
     <header> <!--Creamos el header como en la página de inicio que estará siempre presente para una mayor comodidad-->
         <nav>
             <ul>
-                <li><a href="ValorantFanPage.html"><img src="/Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
+                <li><a href="PaginaValorant.html"><img src="/Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
                 <li><a href="Agentes.html">AGENTES</a></li>
                 <li><a href="Armas.html">ARMAS</a></li>
                 <li><a href="Mapas.html">MAPAS</a></li>
