index sin barra

--- a/PaginaValorant/PaginaValorant.html
+++ b/PaginaValorant/PaginaValorant.html
@@ -10,7 +10,7 @@
     <header> <!--Dentro de la etiqueta header empezamos el encabezado de nuestra página añadiendo una lista desordenada como barra de navegación--> 
         <nav>
             <ul>
-                <li><a href="PaginaValorant.html"><img src="/Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
+                <li><a href="PaginaValorant.html"><img src="Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
                 <li><a href="Agentes.html">AGENTES</a></li>
                 <li><a href="Armas.html">ARMAS</a></li>
                 <li><a href="Mapas.html">MAPAS</a></li>
@@ -20,9 +20,9 @@
     <main> <!--Dentro de la etiqueta main añadimos un vídeo .mp4 que va a ser el banner de nuestra página principal (index)-->
         <div class="banner-video">
             <video autoplay loop muted> <!--Le decimos que se reporduzca nada más entrar en la página pero que lo haga silenciado-->
-                <source src="/Multimedia/VideoValPresentacion.mp4" type="video/mp4">
+                <source src="Multimedia/VideoValPresentacion.mp4" type="video/mp4">
             </video> <!--Añadimos una imagen para el decorado de la página-->
-            <img src="/Multimedia/buff-game-for-fun-earn-for-real-get-paid-to-play-games-valorant-logo-white-symbol-sign-text-metropolis-transparent-png-2572980.png">
+            <img src="Multimedia/buff-game-for-fun-earn-for-real-get-paid-to-play-games-valorant-logo-white-symbol-sign-text-metropolis-transparent-png-2572980.png">
         </div>
         <div> <!--Dentro de este div explicamos lo principal y lo primero que se verá en nuestra página web añadiendo lo más básico-->
         <p class="titulos">¿QUÉ ES VALORANT?</p>
@@ -32,7 +32,7 @@
             se centra en la colaboración y la estrategia, en lugar de habilidades puras de un solo jugador.            
             Valorant también presenta un sistema de calificación en línea que se actualiza periódicamente para asegurar que los jugadores
              mantengan un equilibrio competitivo.</p>
-        <img src="/Multimedia/R.jpg" class="quesvalorant">
+        <img src="Multimedia/R.jpg" class="quesvalorant">
         </div>
         <div class="control"> <!--Dentro de esta clase añadimos un título y creamos una lista desordenada para mayor claridad en los apartados-->
             <p class="titulos">¿CÓMO JUGAR VALORANT?</p>
@@ -47,8 +47,8 @@
                         <li>Abrir menú de mapa: Presiona la tecla M para abrir el menú de mapa y ver la posición de tus aliados y enemigos.</li>
                     </ul>
             <p class="textoinfo">¡Ten en cuenta que los controles pueden ser modificados en los ajustes!</p>
-            <img src="/Multimedia/img_0070.jpg" class="controles">
-            <img src="/Multimedia/raze_and_reyna_render_by_lynwulf_dfgwumg.png" class="razeandreyna">    
+            <img src="Multimedia/img_0070.jpg" class="controles">
+            <img src="Multimedia/raze_and_reyna_render_by_lynwulf_dfgwumg.png" class="razeandreyna">    
         </div>
     </main>
 
