armas sin barra

--- a/PaginaValorant/Armas.html
+++ b/PaginaValorant/Armas.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="PaginaValorant.html"><img src="/Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
+                <li><a href="PaginaValorant.html"><img src="Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
                 <li><a href="Agentes.html">AGENTES</a></li>
                 <li><a href="Armas.html">ARMAS</a></li>
                 <li><a href="Mapas.html">MAPAS</a></li>
@@ -29,22 +29,22 @@
         <ul>
             <li class="titulodelasarmas">CLASSIC</li>
             <p class="textodescr">Ligera y versátil,el arma por defecto es todo un clásico. PRECIO: GRATIS</p>
-            <img src="/Multimedia/Valorant-Classic.webp" class="imgarmas">
+            <img src="Multimedia/Valorant-Classic.webp" class="imgarmas">
             <li class="titulodelasarmas">SHORTY</li>
             <p class="textodescr">Soprended a vuestros enemigos de cerca para maximizar su efectividad. PRECIO: 350 VP
             </p>
-            <img src="/Multimedia/valorant-standard-shorty-weapon-skin.png" class="imgarmas">
+            <img src="Multimedia/valorant-standard-shorty-weapon-skin.png" class="imgarmas">
             <li class="titulodelasarmas">FRENZY</li>
             <p class="textodescr">De cerca, lo mejor es mantener pulsado el gatillo. De lejos, hay que cambiar de
                 estrategia. PRECIO: 450 VP</p>
-            <img src="/Multimedia/R.png" class="imgarmas">
+            <img src="Multimedia/R.png" class="imgarmas">
             <li class="titulodelasarmas">GHOST</li>
             <p class="textodescr">Con silenciador, precisa y estupenda a cualquier distancia. PRECIO: 500 VP</p>
-            <img src="/Multimedia/ghost.png" class="imgarmas">
+            <img src="Multimedia/ghost.png" class="imgarmas">
             <li class="titulodelasarmas">SHERIFF</li>
             <p class="textodescr">Un revólver perfecto para aquellos que busquen siempre el disparo a la cabeza. PRECIO:
                 700 VP</p>
-            <img src="/Multimedia/sheriff.png" class="imgarmas">
+            <img src="Multimedia/sheriff.png" class="imgarmas">
         </ul>
     </div>
     <!--SUBFUSILES-->
@@ -54,10 +54,10 @@
             <li class="titulodelasarmas">STINGER</li>
             <p class="textodescr">Cuando sientan el azote de las primeras balas, sabrán que les ha llegado su hora.
                 PRECIO: 1100 VP</p>
-            <img src="/Multimedia/stinger.png" class="imgarmas">
+            <img src="Multimedia/stinger.png" class="imgarmas">
             <li class="titulodelasarmas">SPECTRE</li>
             <p class="textodescr">Ante la duda, apostad por el Spectre. PRECIO: 1600 VP</p>
-            <img src="/Multimedia/spectre.png" class="imgarmas">
+            <img src="Multimedia/spectre.png" class="imgarmas">
         </ul>
     </div>
     <!--ESCOPETAS-->
@@ -67,11 +67,11 @@
             <li class="titulodelasarmas">BUCKY</li>
             <p class="textodescr">Seáis atacantes o defensores, lo que es que estáis armados con una escopeta de
                 primera. PRECIO: 900 VP</p>
-            <img src="/Multimedia/bucky.png" class="imgarmas">
+            <img src="Multimedia/bucky.png" class="imgarmas">
             <li class="titulodelasarmas">JUDGE</li>
             <p class="textodescr">Una escopeta automática que proporciona mucho daño de forma fiable. PRECIO: 1500 VP
             </p>
-            <img src="/Multimedia/judge.png" class="imgarmas">
+            <img src="Multimedia/judge.png" class="imgarmas">
 
         </ul>
     </div>
@@ -82,18 +82,18 @@
             <li class="titulodelasarmas">BULLDOG</li>
             <p class="textodescr">No hay sensación como la de acabar con un enemigo gracias a Bulldog. PRECIO: 2050 VP
             </p>
-            <img src="/Multimedia/bulldog.png" class="imgarmas">
+            <img src="Multimedia/bulldog.png" class="imgarmas">
             <li class="titulodelasarmas">GUARDIAN</li>
             <p class="textodescr">Brilla en manos de los asesinos más pacientes. PRECIO: 2250 VP</p>
-            <img src="/Multimedia/guardian.png" class="imgarmas">
+            <img src="Multimedia/guardian.png" class="imgarmas">
             <li class="titulodelasarmas">PHANTOM</li>
             <p class="textodescr">Un arma equilibrada pensada para disparar muchas balas con estabilidad. PRECIO: 2900
                 VP</p>
-            <img src="/Multimedia/phantom.png" class="imgarmas">
+            <img src="Multimedia/phantom.png" class="imgarmas">
             <li class="titulodelasarmas">VANDAL</li>
             <p class="textodescr">Esta precisa y potente arma es temible si se dispara en ráfagas cortas. VANDAL: 2900
                 VP</p>
-            <img src="/Multimedia/vandal.png" class="imgarmas">
+            <img src="Multimedia/vandal.png" class="imgarmas">
         </ul>
     </div>
     <!--FRANCOTIRADORES-->
@@ -102,10 +102,10 @@
         <ul>
             <li class="titulodelasarmas">MARSHALL</li>
             <p class="textodescr">Haceos con un ángulo, respirad hondo y conseguid que se arrepientan de doblar la esquina. PRECIO: 950 VP</p>
-            <img src="/Multimedia/marshal.png" class="imgarmas">
+            <img src="Multimedia/marshal.png" class="imgarmas">
             <li class="titulodelasarmas">OPERATOR</li>
             <p class="textodescr">Poneos cómodos, porque la zona es vuestra. PRECIO: 4700 VP</p>
-            <img src="/Multimedia/operator.png" class="imgarmas">
+            <img src="Multimedia/operator.png" class="imgarmas">
         </ul>
     </div>
     <!--ARMAS PESADAS-->
@@ -114,10 +114,10 @@
         <ul>
             <li class="titulodelasarmas">ARES</li>
             <p class="textodescr">Será grande, pero de torpe no tiene un pelo. PRECIO: 1750 VP</p>
-            <img src="/Multimedia/ares.png" class="imgarmas">
+            <img src="Multimedia/ares.png" class="imgarmas">
             <li class="titulodelasarmas">ODIN</li>
             <p class="textodescr">Esta monstruosidad podrá traeros la gloria  y sembrar la desesperación entre los enemigos. PRECIO: 3200 VP</p>
-            <img src="/Multimedia/odin.png" class="imgarmas">
+            <img src="Multimedia/odin.png" class="imgarmas">
         </ul>
     </div>
     <!--CUCHILLO-->
@@ -126,7 +126,7 @@
         <ul>
             <li class="titulodelasarmas">CUCHILLO DE COMBATE</li>
             <p class="textodescr">Una solución de lo mas íntima. PRECIO: GRATIS</p>
-            <img src="/Multimedia/cuchillo default.png" class="imgarmas">
+            <img src="Multimedia/cuchillo default.png" class="imgarmas">
         </ul>
     </div>
 
