agentes sin barra

--- a/PaginaValorant/Agentes.html
+++ b/PaginaValorant/Agentes.html
@@ -10,7 +10,7 @@
     <header> <!--Creamos el header como en la página de inicio que estará siempre presente para una mayor comodidad-->
         <nav>
             <ul>
-                <li><a href="PaginaValorant.html"><img src="/Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
+                <li><a href="PaginaValorant.html"><img src="Multimedia/Games-Valorant-1024x1024.png" class="logo"></a></li>
                 <li><a href="Agentes.html">AGENTES</a></li>
                 <li><a href="Armas.html">ARMAS</a></li>
                 <li><a href="Mapas.html">MAPAS</a></li>
@@ -52,7 +52,7 @@
     <section class="neon"> <!--Creamos un section para almacenar todos los div de cada agemte (en este caso Neon)-->
         <div class="agentesimg1"> 
             <p id="nombren">NEON</p>
-            <img src="/Multimedia/neon.jpg" id="neonimg">
+            <img src="Multimedia/neon.jpg" id="neonimg">
         </div>
         <div class="neondescripcion"> <!--Creamos una clase para los párrafos de la información del agente-->
             <p>Criada en Manilla, Filipinas, Tala Nicole Dimaapi Valdez es una Radiante empoderada por su bioelectricidad la cual se entrelaza con el engrane de radianita de la Tierra.</p>
@@ -82,7 +82,7 @@
     <section class="viper"> <!--Creamos un section para almacenar todos los div de cada agemte (en este caso Viper)-->
         <div class="agentesimg2">
             <p id="nombrev">VIPER</p>
-            <img src="/Multimedia/viper.jpg" id="viperimg">
+            <img src="Multimedia/viper.jpg" id="viperimg">
         </div>
         <div class="viperdescripcion"> <!--Creamos una clase para los párrafos de la información del agente-->
             <p>Sabine Callas es oriunda de Estados Unidos, con posibles vínculos con Seattle. Con un doctorado y premios como el Premio R. Francis y el Premio Denton a la Innovación Sobresaliente, 
@@ -111,7 +111,7 @@
     <section class="sova"> <!--Creamos un section para almacenar todos los div de cada agemte (en este caso Sova)-->
         <div class="agentesimg3">
             <p id="nombres">SOVA</p>
-            <img src="/Multimedia/sova.jpg" id="sovaimg">
+            <img src="Multimedia/sova.jpg" id="sovaimg">
         </div>
         <div class="sovadescripcion">
             <p>Proveniente de la ciudad de Severomorsk, en el Óblast de Murmansk, Rusia, Sasha Novikov es un arquero que se convirtió en agente del Protocolo VALORANT.</p>
@@ -138,7 +138,7 @@
     <section class="cypher"> <!--Creamos un section para almacenar todos los div de cada agemte (en este caso Cypher)-->
         <div class="agentesimg4"> 
             <p id="nombrec">CYPHER</p>
-            <img src="/Multimedia/cypher.jpg" id="cypherimg">
+            <img src="Multimedia/cypher.jpg" id="cypherimg">
         </div>
         <div class="cypherdescripcion">
             <p>Amir El Amari es oriundo de Rabat, Marruecos. Al crecer y vivir allí en la pobreza en ocasiones, los recursos de su ciudad se agotaron debido a las actividades de Kingdom Corporation en el área y, como resultado, El Amari abrigó una visión negativa hacia ellos.</p>
